[project]
name = "payment-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad",email = "habibi.mh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-multipart (>=0.0.24,<0.0.25)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "werkzeug (>=3.1.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)"
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
